--- a/IndustrialCopperModeling.ipynb
+++ b/IndustrialCopperModeling.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPzuKggTDk3QLY3/xh1itxI",
+      "authorship_tag": "ABX9TyONaa5fLadYmG1wpoMPOxFS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qlMn8FDI2uQ7",
-        "outputId": "250d80d2-dc47-4845-84c7-342162ee2175"
+        "outputId": "2c073e91-dff1-4ccd-fc31-0778c3f1ba76"
       },
       "execution_count": 2,
       "outputs": [
@@ -73,7 +73,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IuSsLvhX21HS",
-        "outputId": "7376169e-3cfd-4caf-f2c8-e033c808352d"
+        "outputId": "9c48fcae-20be-42c1-8d63-1d4a1d9183ec"
       },
       "execution_count": 3,
       "outputs": [
@@ -98,7 +98,7 @@
           "height": 486
         },
         "id": "l7z1Jopy3UHC",
-        "outputId": "a9283da3-8447-4b2a-aa78-6f5f07a914bc"
+        "outputId": "b3b0c8fa-1d75-4fab-9104-ec26c2fe4d61"
       },
       "execution_count": 4,
       "outputs": [
@@ -136,7 +136,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-812ab244-baab-4831-b04f-61f3ddff780e\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-a94f4f2f-b5f3-4b0a-8e4b-a1134d83cee8\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -263,7 +263,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-812ab244-baab-4831-b04f-61f3ddff780e')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a94f4f2f-b5f3-4b0a-8e4b-a1134d83cee8')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -315,12 +315,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-812ab244-baab-4831-b04f-61f3ddff780e button.colab-df-convert');\n",
+              "        document.querySelector('#df-a94f4f2f-b5f3-4b0a-8e4b-a1134d83cee8 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-812ab244-baab-4831-b04f-61f3ddff780e');\n",
+              "        const element = document.querySelector('#df-a94f4f2f-b5f3-4b0a-8e4b-a1134d83cee8');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -340,8 +340,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-45a760fd-e9eb-48db-885c-f8c37da678e2\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-45a760fd-e9eb-48db-885c-f8c37da678e2')\"\n",
+              "<div id=\"df-ebdf78e7-fe6f-4091-a6a5-23301a1c2a7f\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ebdf78e7-fe6f-4091-a6a5-23301a1c2a7f')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -460,7 +460,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-45a760fd-e9eb-48db-885c-f8c37da678e2 button');\n",
+              "        document.querySelector('#df-ebdf78e7-fe6f-4091-a6a5-23301a1c2a7f button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -490,7 +490,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6J-OcvZ29LS1",
-        "outputId": "b57b6e2e-bdea-4a5b-fe78-b29ee60a9f3b"
+        "outputId": "db8d84b2-d84d-47aa-c7d2-9bd92574f6a8"
       },
       "execution_count": 5,
       "outputs": [
@@ -525,11 +525,64 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "df.isnull().sum()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_l3xRMygAfzd",
+        "outputId": "2448f0ec-99ae-424a-ed2b-c8ed966e4e82"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "id                   2\n",
+              "item_date            1\n",
+              "quantity tons        0\n",
+              "customer             1\n",
+              "country             28\n",
+              "status               2\n",
+              "item type            0\n",
+              "application         24\n",
+              "thickness            1\n",
+              "width                0\n",
+              "material_ref     77919\n",
+              "product_ref          0\n",
+              "delivery date        1\n",
+              "selling_price        1\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.drop(['id'], axis = 1, inplace=True)"
+      ],
       "metadata": {
         "id": "XQICFvI39Mx7"
       },
-      "execution_count": null,
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['date'] = pd.to_datetime(df['date'])"
+      ],
+      "metadata": {
+        "id": "Xkn1NNnXFckV"
+      },
+      "execution_count": 7,
       "outputs": []
     }
   ]
