--- a/IndustrialCopperModeling.ipynb
+++ b/IndustrialCopperModeling.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPiWydR4c30fJaZegTkN1Hg",
+      "authorship_tag": "ABX9TyMJfWeCXLQAtYiZ7NHYDmD9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qlMn8FDI2uQ7",
-        "outputId": "2c073e91-dff1-4ccd-fc31-0778c3f1ba76"
+        "outputId": "cb911a17-6cd1-43ad-9856-c8f78e336cb0"
       },
       "execution_count": 2,
       "outputs": [
@@ -73,15 +73,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IuSsLvhX21HS",
-        "outputId": "9c48fcae-20be-42c1-8d63-1d4a1d9183ec"
+        "outputId": "8eece0d6-1a22-4727-b2fe-367cb2bdca65"
       },
-      "execution_count": 3,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-3-833bd3c91857>:2: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+            "<ipython-input-60-833bd3c91857>:2: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
             "  df = pd.read_csv(file_path)\n"
           ]
         }
@@ -98,9 +98,9 @@
           "height": 486
         },
         "id": "l7z1Jopy3UHC",
-        "outputId": "b3b0c8fa-1d75-4fab-9104-ec26c2fe4d61"
+        "outputId": "27cca192-193a-491f-dfed-c170fc1e01f8"
       },
-      "execution_count": 4,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -136,7 +136,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a94f4f2f-b5f3-4b0a-8e4b-a1134d83cee8\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-f431e937-378e-43db-94d5-1266330a89de\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -263,7 +263,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a94f4f2f-b5f3-4b0a-8e4b-a1134d83cee8')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f431e937-378e-43db-94d5-1266330a89de')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -315,12 +315,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-a94f4f2f-b5f3-4b0a-8e4b-a1134d83cee8 button.colab-df-convert');\n",
+              "        document.querySelector('#df-f431e937-378e-43db-94d5-1266330a89de button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-a94f4f2f-b5f3-4b0a-8e4b-a1134d83cee8');\n",
+              "        const element = document.querySelector('#df-f431e937-378e-43db-94d5-1266330a89de');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -340,8 +340,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-ebdf78e7-fe6f-4091-a6a5-23301a1c2a7f\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ebdf78e7-fe6f-4091-a6a5-23301a1c2a7f')\"\n",
+              "<div id=\"df-259085b0-c56c-4608-814f-4c1fdb45f831\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-259085b0-c56c-4608-814f-4c1fdb45f831')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -460,7 +460,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-ebdf78e7-fe6f-4091-a6a5-23301a1c2a7f button');\n",
+              "        document.querySelector('#df-259085b0-c56c-4608-814f-4c1fdb45f831 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -476,7 +476,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 23
         }
       ]
     },
@@ -490,9 +490,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6J-OcvZ29LS1",
-        "outputId": "db8d84b2-d84d-47aa-c7d2-9bd92574f6a8"
+        "outputId": "658280f9-7aaf-44e1-c55f-d47a3110b904"
       },
-      "execution_count": 5,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -533,9 +533,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_l3xRMygAfzd",
-        "outputId": "2448f0ec-99ae-424a-ed2b-c8ed966e4e82"
+        "outputId": "eb33add6-9040-4215-da1e-8a168c755326"
       },
-      "execution_count": 6,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -559,7 +559,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 13
         }
       ]
     },
@@ -571,8 +571,179 @@
       "metadata": {
         "id": "XQICFvI39Mx7"
       },
-      "execution_count": 7,
+      "execution_count": 61,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['item_date'].unique()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7yc6bQtzFrLt",
+        "outputId": "9e1f3be9-07e9-4f2a-f32c-2e6d6d7ffd4b"
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([20210401., 19950000., 20210331., 20210330., 20210329., 20210328.,\n",
+              "       20210327., 20210326., 20210325., 20210324., 20210323., 20210322.,\n",
+              "       20210319., 20210318., 20210317., 20210316., 20210315., 20210314.,\n",
+              "       20210313., 20210312., 20210311., 20210310., 20210309., 20210308.,\n",
+              "       20210307., 20210306., 20210305., 20210304., 20210303., 20210302.,\n",
+              "       20210301., 20210228., 20210227., 20210226., 20210225., 20210224.,\n",
+              "       20210223., 20210222., 20210221., 20210220., 20210219., 20210218.,\n",
+              "       20210217., 20210216., 20210215., 20210214., 20210213., 20210212.,\n",
+              "       20210211., 20210210., 20210209., 20210208., 20210207., 20210205.,\n",
+              "       20210204., 20210203., 20210202., 20210201., 20210131., 20210130.,\n",
+              "       20210129., 20210128., 20210127., 20210126., 20210125., 20210124.,\n",
+              "       20210122., 20210121., 20210120., 20210119., 20210118., 20210117.,\n",
+              "       20210116., 20210115., 20210114., 20210113., 20210112., 20210111.,\n",
+              "       20210110., 20210109., 20210108., 20210107., 20210106., 20210105.,\n",
+              "       20210104., 20210103., 20201231., 20201230., 20201229., 20201228.,\n",
+              "       20201227., 20201226., 20201224., 20201223., 20201222., 20201221.,\n",
+              "       20201219., 20201218., 20201217., 20201216., 20201215., 20201214.,\n",
+              "       20201213., 20201212., 20201211., 20201210., 20201209., 20201208.,\n",
+              "       20201207., 20201206., 20201205., 20201204., 20201203., 20201202.,\n",
+              "       20201201., 20201130., 20201129., 20201128., 20201127., 20201126.,\n",
+              "       20201125., 20201124., 20201123., 20201122., 20201120., 20201119.,\n",
+              "       20201118., 20201117., 20201116., 20201115., 20201114., 20201113.,\n",
+              "       20201112.,       nan, 20201111., 20191919., 20201110., 20201109.,\n",
+              "       20201106., 20201105., 20201104., 20201103., 20201102., 20201101.,\n",
+              "       20201030., 20201029., 20201028., 20201027., 20201026., 20201025.,\n",
+              "       20201024., 20201023., 20201022., 20201021., 20201020., 20201019.,\n",
+              "       20201018., 20201016., 20201015., 20201014., 20201013., 20201012.,\n",
+              "       20201011., 20201009., 20201008., 20201007., 20201006., 20201005.,\n",
+              "       20201004., 20201002., 20201001., 20200930., 20200929., 20200928.,\n",
+              "       20200925., 20200924., 20200923., 20200922., 20200921., 20200920.,\n",
+              "       20200919., 20200918., 20200917., 20200916., 20200915., 20200914.,\n",
+              "       20200913., 20200911., 20200910., 20200909., 20200908., 20200907.,\n",
+              "       20200906., 20200905., 20200904., 20200903., 20200902., 20200901.,\n",
+              "       20200831., 20200829., 20200828., 20200827., 20200826., 20200825.,\n",
+              "       20200824., 20200822., 20200821., 20200820., 20200819., 20200818.,\n",
+              "       20200817., 20200815., 20200814., 20200813., 20200812., 20200811.,\n",
+              "       20200810., 20200809., 20200807., 20200806., 20200805., 20200804.,\n",
+              "       20200803., 20200802., 20200801., 20200731., 20200730., 20200729.,\n",
+              "       20200728., 20200727., 20200726., 20200724., 20200723., 20200722.,\n",
+              "       20200721., 20200720., 20200719., 20200718., 20200717., 20200716.,\n",
+              "       20200715., 20200714., 20200713., 20200712., 20200710., 20200709.,\n",
+              "       20200708., 20200707., 20200706., 20200705., 20200704., 20200703.,\n",
+              "       20200702.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 62
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['item_date'].fillna(method='bfill', inplace=True)"
+      ],
+      "metadata": {
+        "id": "5-HibFT8F47d"
+      },
+      "execution_count": 63,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.drop(df[df['item_date'].isin([19950000.0, 20191919.0])].index, inplace=True)"
+      ],
+      "metadata": {
+        "id": "ZtrG4wlDIYNn"
+      },
+      "execution_count": 72,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['item_date'] = pd.to_datetime(df['item_date'], format='%Y%m%d')"
+      ],
+      "metadata": {
+        "id": "AEijSBePAYm0"
+      },
+      "execution_count": 74,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['item_date'].head()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JJOPqZ35CAdk",
+        "outputId": "0bdbbd9a-b76d-4454-ad8f-02b4168ce72c"
+      },
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0   2021-04-01\n",
+              "1   2021-04-01\n",
+              "2   2021-04-01\n",
+              "3   2021-04-01\n",
+              "4   2021-04-01\n",
+              "Name: item_date, dtype: datetime64[ns]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 75
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.isnull().sum()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zMXRXZrtFKnd",
+        "outputId": "4a9bb052-b7db-47ec-a41f-2b057da74634"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "item_date            0\n",
+              "quantity tons        0\n",
+              "customer             1\n",
+              "country             28\n",
+              "status               2\n",
+              "item type            0\n",
+              "application         24\n",
+              "thickness            1\n",
+              "width                0\n",
+              "material_ref     77919\n",
+              "product_ref          0\n",
+              "delivery date        1\n",
+              "selling_price        1\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
     }
   ]
 }
